--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -11,14 +11,15 @@
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
       {{- if ne .Site.Params.ui.navbar_logo false -}}
-        {{ with resources.Get "icons/nmidlogo.svg" -}}
+        {{ with resources.Get "icons/logo.svg" -}}
           {{ ( . | minify).Content | safeHTML -}}
         {{ end -}}
       {{ end -}}
     </span>
     {{- /**/ -}}
     <span class="navbar-brand__name">
-      {{- .Site.Title -}}
+      <!-- {{- .Site.Title -}} -->
+      nmid
     </span>
     {{- /**/ -}}
   </a>
