--- a/assets/scss/_boxes.scss
+++ b/assets/scss/_boxes.scss
@@ -23,7 +23,7 @@
           border: {
             style: solid;
             width: 25px 30px 0 30px;
-            color: #{$color-value} transparent transparent transparent;
+            color: #F1F3F4 transparent transparent transparent;
           }
           z-index: 3;
           position: absolute;
