--- a/layouts/community/list.html
+++ b/layouts/community/list.html
@@ -3,6 +3,7 @@
 <div><a class="td-offset-anchor"></a></div>
 <section
   class="row td-box td-box--primary position-relative td-box--height-auto"
+  style="background:#F1F3F4;color:#000"
 >
   <div class="col-12">
     <div class="container text-center td-arrow-down">
