--- a/layouts/community/list.html
+++ b/layouts/community/list.html
@@ -1,7 +1,9 @@
 {{ define "main" -}}
 
 <div><a class="td-offset-anchor"></a></div>
-<section class="row td-box position-relative td-box--height-auto" style="background:#F1F3F4;color:#000">
+<section
+  class="row td-box td-box--primary position-relative td-box--height-auto"
+>
   <div class="col-12">
     <div class="container text-center td-arrow-down">
       <span class="h4 mb-0">
