--- a/layouts/shortcodes/blocks/lead.html
+++ b/layouts/shortcodes/blocks/lead.html
@@ -7,7 +7,7 @@
 {{ end -}}
 
 <div><a id="td-block-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
-<section class="row td-box td-box--{{ $col_id }} position-relative td-box--height-{{ $height }}">
+<section class="row td-box td-box--{{ $col_id }} position-relative td-box--height-{{ $height }}" style="background:#F1F3F4;color:#000">
 <div class="col-12">
 <div class="container text-center td-arrow-down">
 <div class="h4 mb-0">
