--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -28,6 +28,11 @@
             <p class="td-footer__about mt-2"><a href="{{ .RelPermalink }}">{{ .Title }}</a></p>
           {{- end -}}
         {{ end }}
+        <p class="td-footer__about mt-2">
+          <a href="https://www.netlify.com" target="_blank" rel="noopener">
+            <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deploys by Netlify" />
+          </a>
+        </p>
       </div>
     </div>
   </div>
