--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -18,8 +18,7 @@
     </span>
     {{- /**/ -}}
     <span class="navbar-brand__name">
-      <!-- {{- .Site.Title -}} -->
-      nmid
+      {{- .Site.Title -}}
     </span>
     {{- /**/ -}}
   </a>
