--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,6 +36,7 @@
   integrity="sha384-203J0SNzyqHby3iU6hzvzltrWi/M41wOP5Gu+BiJMz5nwKykbkUx8Kp7iti0Lpli"
   crossorigin="anonymous"></script>
 {{ end -}}
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 
 {{ if .Site.Params.prism_syntax_highlighting -}}
 <link rel="stylesheet" href="{{ "css/prism.css" | relURL }}"/>
