--- a/layouts/shortcodes/blocks/section.html
+++ b/layouts/shortcodes/blocks/section.html
@@ -3,7 +3,7 @@
 {{ $type   := .Get "type" | default "container" -}}
 
 <div><a id="td-block-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
-<section class="row td-box td-box--{{ $col_id }} td-box--height-{{ $height }}" style="background:#F25961">
+<section class="row td-box td-box--{{ $col_id }} td-box--height-{{ $height }}" style="background:#646677">
 <div class="col">
 <div class="{{ $type }}">
 {{/* Do NOT remove this comment! It ends the HTML block above. See https://spec.commonmark.org/0.30/#html-blocks, 7. */}}
