--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -17,8 +17,9 @@
 }
 
 .navbar-bg-onscroll {
-  background: $primary !important;
+  background: #F46650 !important;
   opacity: inherit;
+
 }
 
 .td-navbar {
