--- a/layouts/shortcodes/blocks/cover.html
+++ b/layouts/shortcodes/blocks/cover.html
@@ -31,7 +31,8 @@
   <div class="col-12">
     <div class="container td-overlay__inner">
       <div class="text-center">
-        {{ with .Get "title" }}<center><img src="images/logo-removebg.png" alt="nmid Logo" width="350" height="350" style="max-width: 100%;"></center><h1 class="display-1 mt-0 pb-4">{{ $title := . }}{{ with $logo_image }}{{ $logo_image_resized := (.Fit (printf "70x70 %s" $logo_anchor)) }}<img class="td-cover-logo" src="{{ $logo_image_resized.RelPermalink }}" alt="{{ $title | html }} Logo">{{ end }}{{ $title | html }}</h1>{{ end }}
+        <center><img src="images/logo-removebg.png" alt="nmid Logo" width="350" height="350" style="max-width: 100%;"></center>
+        {{ with .Get "title" }}<h1 class="display-1 mt-0 pb-4">{{ $title := . }}{{ with $logo_image }}{{ $logo_image_resized := (.Fit (printf "70x70 %s" $logo_anchor)) }}<img class="td-cover-logo" src="{{ $logo_image_resized.RelPermalink }}" alt="{{ $title | html }} Logo">{{ end }}{{ $title | html }}</h1>{{ end }}
         {{ with .Get "subtitle" }}<p class="display-2 text-uppercase mb-0">{{ . | html }}</p>{{ end }}
         <div class="pt-3 lead">
           {{ if eq .Page.File.Ext "md" }}
