--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -10,11 +10,7 @@
   <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
-      {{- if ne .Site.Params.ui.navbar_logo false -}}
-        {{ with resources.Get "logo-removebg.png" -}}
-          {{ ( . | minify).Content | safeHTML -}}
-        {{ end -}}
-      {{ end -}}
+      <img class="td-cover-logo" src="logo-removebg.png" alt="Logo">
     </span>
     {{- /**/ -}}
     <span class="navbar-brand__name">
