--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -10,7 +10,7 @@
   <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
-      <img class="td-cover-logo" src="images/logo-removebg.png" alt="Logo">
+      <img class="td-cover-logo" src="../../images/logo-removebg.png" alt="Logo">
     </span>
     {{- /**/ -}}
     <span class="navbar-brand__name">
