--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -10,7 +10,7 @@
   <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
-      <img class="td-cover-logo" src="./logo/images/logo-removebg.png" alt="Logo">
+      <img src="./logo/images/logo-removebg.png" style="width:50px;height:50px;">
     </span>
     {{- /**/ -}}
     <span class="navbar-brand__name">
