--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -10,7 +10,9 @@
   <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
-      
+      {{- if ne .Site.Params.ui.navbar_logo false -}}
+        
+      {{ end -}}
     </span>
     {{- /**/ -}}
     <span class="navbar-brand__name">
