--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -11,7 +11,9 @@
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
       {{- if ne .Site.Params.ui.navbar_logo false -}}
-        
+        {{ with resources.Get "icons/logo.svg" -}}
+          {{ ( . | minify).Content | safeHTML -}}
+        {{ end -}}
       {{ end -}}
     </span>
     {{- /**/ -}}
