--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -11,7 +11,7 @@
     {{- /**/ -}}
     <span class="navbar-brand__logo navbar-logo">
       {{- if ne .Site.Params.ui.navbar_logo false -}}
-        
+      <img src="/images/logo-removebg.png" style="width:50px;height:50px;">
       {{ end -}}
     </span>
     {{- /**/ -}}
