--- a/layouts/shortcodes/blocks/feature.html
+++ b/layouts/shortcodes/blocks/feature.html
@@ -2,11 +2,11 @@
 {{ $url_text := .Get "url_text" -}}
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div>
-  {{ if (eq .Get "title" "npartword") -}}
-    <i><img src="/images/npartword_logo-removebg.png" style="width:150px;height:150px"></i>
+  {{ if eq .Get "title" "npartword" }}
+      <i><img src="/images/npartword_logo-removebg.png" style="width:150px;height:150px"></i>
   {{ else }}
-    <i><img src="/images/npartword_logo-removebg.png" style="width:150px;height:150px"></i>
-  {{ end -}}
+      <i><img src="/images/npartword_logo-removebg.png" style="width:150px;height:150px"></i>
+  {{ end }}
 </div>
 <h4 class="h3">
   {{- .Get "title" | markdownify -}}
