--- a/layouts/shortcodes/blocks/feature.html
+++ b/layouts/shortcodes/blocks/feature.html
@@ -1,12 +1,8 @@
 {{ $icon := .Get "icon" | default "fa-lightbulb" -}}
 {{ $url_text := .Get "url_text" -}}
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
-<div>
-  {{ if eq .Get "title" "npartword" }}
-      <i><img src="/images/npartword_logo-removebg.png" style="width:150px;height:150px"></i>
-  {{ else }}
-      <i><img src="/images/npartword_logo-removebg.png" style="width:150px;height:150px"></i>
-  {{ end }}
+<div class="mb-4 h1">
+  <i class="{{ if not (or (hasPrefix $icon "fas ") (hasPrefix $icon "fab ")) }}fas {{ end }}{{ $icon }}"></i>
 </div>
 <h4 class="h3">
   {{- .Get "title" | markdownify -}}
