--- a/layouts/shortcodes/blocks/about.html
+++ b/layouts/shortcodes/blocks/about.html
@@ -17,7 +17,7 @@
 
 <div id="{{ $blockID }}" style="--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right: calc(-1.5 * var(--bs-gutter-x));margin-left: calc(-1.5 * var(--bs-gutter-x));">
   <video playsinline="" autoplay="" muted="" loop="" style="width:100%">
-    <source src="https://player.vimeo.com/external/269346850.sd.mp4?s=0e47d6bbc49002405ce702e19f57597b18611a96&amp;profile_id=164&amp;oauth2_token_id=57447761" type="video/mp4">
+    <source src="bgvideo.mp4" type="video/mp4">
   </video>
   <div class="col-12">
     <div class="container td-overlay__inner" style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%); color:#fff;">
