--- a/layouts/shortcodes/blocks/about.html
+++ b/layouts/shortcodes/blocks/about.html
@@ -15,12 +15,12 @@
 <link rel="preload" as="image" href="{{ $promo_image_big.RelPermalink }}" media="(min-width: 1200px)">
 {{ end -}}
 
-<div id="{{ $blockID }}" style="--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right: calc(-1.5 * var(--bs-gutter-x));margin-left: calc(-1.5 * var(--bs-gutter-x));">
-  <video playsinline="" autoplay="" muted="" loop="" style="width:100%">
+<div id="{{ $blockID }}" style="--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right: calc(-0.5 * var(--bs-gutter-x));margin-left: calc(-0.5 * var(--bs-gutter-x));">
+  <video playsinline="" autoplay="" muted="" loop="" style="position: relative;width: 100%;">
     <source src="bgvideo.mp4" type="video/mp4">
   </video>
-  <div class="col-12">
-    <div class="container td-overlay__inner" style="position:relative; left:0; top:0;margin-top:-1150px;color:#fff;">
+  <div class="col-12" style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%); color:#fff">
+    <div class="container td-overlay__inner">
       <div class="text-center">
         <center><img src="logo-removebg.png" alt="nmid Logo" width="350" height="350" style="max-width: 100%;"></center>
         {{ with .Get "title" }}<h1 class="display-1 mt-0 pb-4">{{ $title := . }}{{ with $logo_image }}{{ $logo_image_resized := (.Fit (printf "70x70 %s" $logo_anchor)) }}{{ end }}{{ $title | html }}</h1>{{ end }}
