--- a/layouts/shortcodes/blocks/cover.html
+++ b/layouts/shortcodes/blocks/cover.html
@@ -15,8 +15,8 @@
 <link rel="preload" as="image" href="{{ $promo_image_big.RelPermalink }}" media="(min-width: 1200px)">
 {{ end -}}
 
-<div id="{{ $blockID }}" style="--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right: calc(-1.5 * var(--bs-gutter-x));margin-left: calc(-1.5 * var(--bs-gutter-x));">
-  <video playsinline="" autoplay="" muted="" loop="" style="width:100%">
+<div id="{{ $blockID }}" style="--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right: calc(-0.5 * var(--bs-gutter-x));margin-left: calc(-0.5 * var(--bs-gutter-x));">
+  <video playsinline="" autoplay="" muted="" loop="" style="position: relative;width: 100%;">
     <source src="bgvideo.mp4" poster="featured-background.jpg" type="video/mp4">
   </video>
   <div class="col-12">
