--- a/layouts/shortcodes/blocks/cover.html
+++ b/layouts/shortcodes/blocks/cover.html
@@ -17,7 +17,7 @@
 
 <div id="{{ $blockID }}" style="--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right: calc(-0.5 * var(--bs-gutter-x));margin-left: calc(-0.5 * var(--bs-gutter-x));">
   <video playsinline="" autoplay="" muted="" loop="" style="position: relative;width: 100%;">
-    <source src="bgvideo.mp4" poster="{{ $promo_image_big.RelPermalink }}" type="video/mp4">
+    <source src="bgvideo.mp4" poster="featured-background.jpg" type="video/mp4">
   </video>
   <div class="col-12" style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%); color:#fff">
     <div class="container td-overlay__inner">
