--- a/layouts/partials/community_links.html
+++ b/layouts/partials/community_links.html
@@ -16,7 +16,7 @@
     {{ end }}
     <p>
       {{ T "community_how_to" . }}
-      <a href="/docs/contribution-guidelines/">{{ T "community_guideline" }}</a>.
+      {{ T "community_guideline" }}.
     </p>
   </div>
 </section>
